# dipcode

back/: .gitignore  nginx.conf  pyproject.toml  requirements.txt
back/backend/apps/common/: __init__.py  admin.py  apps.py
back/backend/apps/common/migrations/: 0001_initial.py
back/backend/apps/common/models/: __init__.py  currency.py  reference.py
back/backend/apps/common/serializers/: __init__.py  reference_serializer.py
back/backend/apps/common/services/: __init__.py  base_selector.py  base_service.py  crypto_cloud_sdk.py  currency_service.py
back/backend/apps/orders/: __init__.py  apps.py
back/backend/apps/orders/api/: urls.py
back/backend/apps/orders/migrations/: 0001_initial.py
back/backend/apps/orders/models/: __init__.py  cart_item.py  order.py  order_item.py
back/backend/apps/orders/serializers/: __init__.py  order_serializer.py
back/backend/apps/orders/services/: __init__.py  cart_service.py  order_service.py
back/backend/apps/products/: __init__.py  admin.py  apps.py
back/backend/apps/products/api/: urls.py
back/backend/apps/products/migrations/: 0001_initial.py  0002_auto_20240510_2100.py  0003_auto_20240510_2108.py  0004_auto_20240518_0320.py
back/backend/apps/products/models/: __init__.py  category.py  picture.py  product.py
back/backend/apps/products/selectors/: __init__.py  (+1 more)
back/backend/apps/users/: __init__.py  admin.py  apps.py
back/backend/src/: urls.py
back/backend/src/settings/: __init__.py
back/frontend/templates/: base.html  home.html
back/frontend/templates/components/: footer.html  header.html
(+30 files in other folders)
